Metaprogramming/Antrl/Capl_grammar/capl-vscode/grammar/.antlr/CaplParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.8
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from d:\Projects\dotNET\appDev-NET\Metaprogramming\Antrl\Capl_grammar\capl-vscode\grammar\Capl.g4 by ANTLR 4.8

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.8")]
[System.CLSCompliant(false)]
public partial class CaplParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, Break=12, Case=13, Char=14, Continue=15, Default=16, 
		Do=17, Double=18, Else=19, Float=20, For=21, If=22, Inline=23, Int=24, 
		Long=25, Restrict=26, Return=27, Switch=28, Void=29, While=30, Alignas=31, 
		Alignof=32, Atomic=33, Bool=34, Complex=35, Generic=36, Imaginary=37, 
		Noreturn=38, ThreadLocal=39, LeftParen=40, RightParen=41, LeftBracket=42, 
		RightBracket=43, LeftBrace=44, RightBrace=45, Less=46, LessEqual=47, Greater=48, 
		GreaterEqual=49, LeftShift=50, RightShift=51, Plus=52, PlusPlus=53, Minus=54, 
		MinusMinus=55, Star=56, Div=57, Mod=58, And=59, Or=60, AndAnd=61, OrOr=62, 
		Caret=63, Not=64, Tilde=65, Question=66, Colon=67, Semi=68, Comma=69, 
		Assign=70, StarAssign=71, DivAssign=72, ModAssign=73, PlusAssign=74, MinusAssign=75, 
		LeftShiftAssign=76, RightShiftAssign=77, AndAssign=78, XorAssign=79, OrAssign=80, 
		Equal=81, NotEqual=82, Arrow=83, Dot=84, Ellipsis=85, Identifier=86, Constant=87, 
		DigitSequence=88, StringLiteral=89, AsmBlock=90, Whitespace=91, Newline=92, 
		BlockComment=93, LineComment=94;
	public const int
		RULE_primaryExpression = 0, RULE_genericSelection = 1, RULE_genericAssocList = 2, 
		RULE_genericAssociation = 3, RULE_postfixExpression = 4, RULE_argumentExpressionList = 5, 
		RULE_unaryExpression = 6, RULE_unaryOperator = 7, RULE_castExpression = 8, 
		RULE_multiplicativeExpression = 9, RULE_additiveExpression = 10, RULE_shiftExpression = 11, 
		RULE_relationalExpression = 12, RULE_equalityExpression = 13, RULE_andExpression = 14, 
		RULE_exclusiveOrExpression = 15, RULE_inclusiveOrExpression = 16, RULE_logicalAndExpression = 17, 
		RULE_logicalOrExpression = 18, RULE_conditionalExpression = 19, RULE_assignmentExpression = 20, 
		RULE_assignmentOperator = 21, RULE_expression = 22, RULE_constantExpression = 23, 
		RULE_declaration = 24, RULE_declarationSpecifiers = 25, RULE_declarationSpecifiers2 = 26, 
		RULE_declarationSpecifier = 27, RULE_initDeclaratorList = 28, RULE_initDeclarator = 29, 
		RULE_typeSpecifier = 30, RULE_specifierQualifierList = 31, RULE_atomicTypeSpecifier = 32, 
		RULE_functionSpecifier = 33, RULE_alignmentSpecifier = 34, RULE_declarator = 35, 
		RULE_directDeclarator = 36, RULE_gccDeclaratorExtension = 37, RULE_gccAttributeSpecifier = 38, 
		RULE_gccAttributeList = 39, RULE_gccAttribute = 40, RULE_nestedParenthesesBlock = 41, 
		RULE_parameterTypeList = 42, RULE_parameterList = 43, RULE_parameterDeclaration = 44, 
		RULE_identifierList = 45, RULE_typeName = 46, RULE_abstractDeclarator = 47, 
		RULE_directAbstractDeclarator = 48, RULE_initializer = 49, RULE_initializerList = 50, 
		RULE_designation = 51, RULE_designatorList = 52, RULE_designator = 53, 
		RULE_statement = 54, RULE_labeledStatement = 55, RULE_compoundStatement = 56, 
		RULE_blockItemList = 57, RULE_blockItem = 58, RULE_expressionStatement = 59, 
		RULE_selectionStatement = 60, RULE_iterationStatement = 61, RULE_forCondition = 62, 
		RULE_forDeclaration = 63, RULE_forExpression = 64, RULE_jumpStatement = 65, 
		RULE_compilationUnit = 66, RULE_translationUnit = 67, RULE_externalDeclaration = 68, 
		RULE_functionDefinition = 69, RULE_declarationList = 70;
	public static readonly string[] ruleNames = {
		"primaryExpression", "genericSelection", "genericAssocList", "genericAssociation", 
		"postfixExpression", "argumentExpressionList", "unaryExpression", "unaryOperator", 
		"castExpression", "multiplicativeExpression", "additiveExpression", "shiftExpression", 
		"relationalExpression", "equalityExpression", "andExpression", "exclusiveOrExpression", 
		"inclusiveOrExpression", "logicalAndExpression", "logicalOrExpression", 
		"conditionalExpression", "assignmentExpression", "assignmentOperator", 
		"expression", "constantExpression", "declaration", "declarationSpecifiers", 
		"declarationSpecifiers2", "declarationSpecifier", "initDeclaratorList", 
		"initDeclarator", "typeSpecifier", "specifierQualifierList", "atomicTypeSpecifier", 
		"functionSpecifier", "alignmentSpecifier", "declarator", "directDeclarator", 
		"gccDeclaratorExtension", "gccAttributeSpecifier", "gccAttributeList", 
		"gccAttribute", "nestedParenthesesBlock", "parameterTypeList", "parameterList", 
		"parameterDeclaration", "identifierList", "typeName", "abstractDeclarator", 
		"directAbstractDeclarator", "initializer", "initializerList", "designation", 
		"designatorList", "designator", "statement", "labeledStatement", "compoundStatement", 
		"blockItemList", "blockItem", "expressionStatement", "selectionStatement", 
		"iterationStatement", "forCondition", "forDeclaration", "forExpression", 
		"jumpStatement", "compilationUnit", "translationUnit", "externalDeclaration", 
		"functionDefinition", "declarationList"
	};

	private static readonly string[] _LiteralNames = {
		null, "'__extension__'", "'__builtin_va_arg'", "'__builtin_offsetof'", 
		"'__m128'", "'__m128d'", "'__m128i'", "'__inline__'", "'__stdcall'", "'__declspec'", 
		"'__asm'", "'__attribute__'", "'break'", "'case'", "'char'", "'continue'", 
		"'default'", "'do'", "'double'", "'else'", "'float'", "'for'", "'if'", 
		"'inline'", "'int'", "'long'", "'restrict'", "'return'", "'switch'", "'void'", 
		"'while'", "'_Alignas'", "'_Alignof'", "'_Atomic'", "'_Bool'", "'_Complex'", 
		"'_Generic'", "'_Imaginary'", "'_Noreturn'", "'_Thread_local'", "'('", 
		"')'", "'['", "']'", "'{'", "'}'", "'<'", "'<='", "'>'", "'>='", "'<<'", 
		"'>>'", "'+'", "'++'", "'-'", "'--'", "'*'", "'/'", "'%'", "'&'", "'|'", 
		"'&&'", "'||'", "'^'", "'!'", "'~'", "'?'", "':'", "';'", "','", "'='", 
		"'*='", "'/='", "'%='", "'+='", "'-='", "'<<='", "'>>='", "'&='", "'^='", 
		"'|='", "'=='", "'!='", "'->'", "'.'", "'...'"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		"Break", "Case", "Char", "Continue", "Default", "Do", "Double", "Else", 
		"Float", "For", "If", "Inline", "Int", "Long", "Restrict", "Return", "Switch", 
		"Void", "While", "Alignas", "Alignof", "Atomic", "Bool", "Complex", "Generic", 
		"Imaginary", "Noreturn", "ThreadLocal", "LeftParen", "RightParen", "LeftBracket", 
		"RightBracket", "LeftBrace", "RightBrace", "Less", "LessEqual", "Greater", 
		"GreaterEqual", "LeftShift", "RightShift", "Plus", "PlusPlus", "Minus", 
		"MinusMinus", "Star", "Div", "Mod", "And", "Or", "AndAnd", "OrOr", "Caret", 
		"Not", "Tilde", "Question", "Colon", "Semi", "Comma", "Assign", "StarAssign", 
		"DivAssign", "ModAssign", "PlusAssign", "MinusAssign", "LeftShiftAssign", 
		"RightShiftAssign", "AndAssign", "XorAssign", "OrAssign", "Equal", "NotEqual", 
		"Arrow", "Dot", "Ellipsis", "Identifier", "Constant", "DigitSequence", 
		"StringLiteral", "AsmBlock", "Whitespace", "Newline", "BlockComment", 
		"LineComment"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "Capl.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return new string(_serializedATN); } }

	static CaplParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public CaplParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public CaplParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class PrimaryExpressionContext : ParserRuleContext {
		public ITerminalNode Identifier() { return GetToken(CaplParser.Identifier, 0); }
		public ITerminalNode Constant() { return GetToken(CaplParser.Constant, 0); }
		public ITerminalNode[] StringLiteral() { return GetTokens(CaplParser.StringLiteral); }
		public ITerminalNode StringLiteral(int i) {
			return GetToken(CaplParser.StringLiteral, i);
		}
		public ITerminalNode LeftParen() { return GetToken(CaplParser.LeftParen, 0); }
		public ExpressionContext expression() {
			return GetRuleContext<ExpressionContext>(0);
		}
		public ITerminalNode RightParen() { return GetToken(CaplParser.RightParen, 0); }
		public GenericSelectionContext genericSelection() {
			return GetRuleContext<GenericSelectionContext>(0);
		}
		public CompoundStatementContext compoundStatement() {
			return GetRuleContext<CompoundStatementContext>(0);
		}
		public UnaryExpressionContext unaryExpression() {
			return GetRuleContext<UnaryExpressionContext>(0);
		}
		public ITerminalNode Comma() { return GetToken(CaplParser.Comma, 0); }
		public TypeNameContext typeName() {
			return GetRuleContext<TypeNameContext>(0);
		}
		public PrimaryExpressionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_primaryExpression; } }
	}

	[RuleVersion(0)]
	public PrimaryExpressionContext primaryExpression() {
		PrimaryExpressionContext _localctx = new PrimaryExpressionContext(Context, State);
		EnterRule(_localctx, 0, RULE_primaryExpression);
		int _la;
		try {
			State = 175;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,2,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 142; Match(Identifier);
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 143; Match(Constant);
				}
				break;
			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 145;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				do {
					{
					{
					State = 144; Match(StringLiteral);
					}
					}
					State = 147;
					ErrorHandler.Sync(this);
					_la = TokenStream.LA(1);
				} while ( _la==StringLiteral );
				}
				break;
			case 4:
				EnterOuterAlt(_localctx, 4);
				{
				State = 149; Match(LeftParen);
				State = 150; expression();
				State = 151; Match(RightParen);
				}
				break;
			case 5:
				EnterOuterAlt(_localctx, 5);
				{
				State = 153; genericSelection();
				}
				break;
			case 6:
				EnterOuterAlt(_localctx, 6);
				{
				State = 155;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				if (_la==T__0) {
					{
					State = 154; Match(T__0);
					}
				}

				State = 157; Match(LeftParen);
				State = 158; compoundStatement();
				State = 159; Match(RightParen);
				}
				break;
			case 7:
				EnterOuterAlt(_localctx, 7);
				{
				State = 161; Match(T__1);
				State = 162; Match(LeftParen);
				State = 163; unaryExpression();
				State = 164; Match(Comma);
				State = 165; typeName();
				State = 166; Match(RightParen);
				}
				break;
			case 8:
				EnterOuterAlt(_localctx, 8);
				{
				State = 168; Match(T__2);
				State = 169; Match(LeftParen);
				State = 170; typeName();
				State = 171; Match(Comma);
				State = 172; unaryExpression();
				State = 173; Match(RightParen);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class GenericSelectionContext : ParserRuleContext {
		public ITerminalNode Generic() { return GetToken(CaplParser.Generic, 0); }
		public ITerminalNode LeftParen() { return GetToken(CaplParser.LeftParen, 0); }
		public AssignmentExpressionContext assignmentExpression() {
			return GetRuleContext<AssignmentExpressionContext>(0);
		}
		public ITerminalNode Comma() { return GetToken(CaplParser.Comma, 0); }
		public GenericAssocListContext genericAssocList() {
			return GetRuleContext<GenericAssocListContext>(0);
		}
		public ITerminalNode RightParen() { return GetToken(CaplParser.RightParen, 0); }
		public GenericSelectionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_genericSelection; } }
	}

	[RuleVersion(0)]
	public GenericSelectionContext genericSelection() {
		GenericSelectionContext _localctx = new GenericSelectionContext(Context, State);
		EnterRule(_localctx, 2, RULE_genericSelection);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 177; Match(Generic);
			State = 178; Match(LeftParen);
			State = 179; assignmentExpression();
			State = 180; Match(Comma);
			State = 181; genericAssocList();
			State = 182; Match(RightParen);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class GenericAssocListContext : ParserRuleContext {
		public GenericAssociationContext[] genericAssociation() {
			return GetRuleContexts<GenericAssociationContext>();
		}
		public GenericAssociationContext genericAssociation(int i) {
			return GetRuleContext<GenericAssociationContext>(i);
		}
		public ITerminalNode[] Comma() { return GetTokens(CaplParser.Comma); }
		public ITerminalNode Comma(int i) {
			return GetToken(CaplParser.Comma, i);
		}
		public GenericAssocListContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_genericAssocList; } }
	}

	[RuleVersion(0)]
	public GenericAssocListContext genericAssocList() {
		GenericAssocListContext _localctx = new GenericAssocListContext(Context, State);
		EnterRule(_localctx, 4, RULE_genericAssocList);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 184; genericAssociation();
			State = 189;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==Comma) {
				{
				{
				State = 185; Match(Comma);
				State = 186; genericAssociation();
				}
				}
				State = 191;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class GenericAssociationContext : ParserRuleContext {
		public ITerminalNode Colon() { return GetToken(CaplParser.Colon, 0); }
		public AssignmentExpressionContext assignmentExpression() {
			return GetRuleContext<AssignmentExpressionContext>(0);
		}
		public TypeNameContext typeName() {
			return GetRuleContext<TypeNameContext>(0);
		}
		public ITerminalNode Default() { return GetToken(CaplParser.Default, 0); }
		public GenericAssociationContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_genericAssociation; } }
	}

	[RuleVersion(0)]
	public GenericAssociationContext genericAssociation() {
		GenericAssociationContext _localctx = new GenericAssociationContext(Context, State);
		EnterRule(_localctx, 6, RULE_genericAssociation);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 194;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case T__0:
			case T__3:
			case T__4:
			case T__5:
			case Char:
			case Double:
			case Float:
			case Int:
			case Long:
			case Void:
			case Atomic:
			case Bool:
			case Complex:
				{
				State = 192; typeName();
				}
				break;
			case Default:
				{
				State = 193; Match(Default);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			State = 196; Match(Colon);
			State = 197; assignmentExpression();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
